--- a/static/css/previous12.7/header.css
+++ b/static/css/previous12.7/header.css
@@ -254,29 +254,29 @@ ul{
   visibility: hidden;
   position:fixed;
   left:50%;
-  margin-left:-320px;
+  margin-left:-210px;
   top:50%;
-  margin-top:-260px;
+  margin-top:-121px;
   z-index: 12;
 }
 #Face_login_bgd {
   visibility: hidden;
   position:fixed;
   left:50%;
-  margin-left:-400px;
+  margin-left:-260px;
   top:50%;
-  margin-top:-300px;
-  width:800px;
-  height:600px;
+  margin-top:-171px;
+  width:520px;
+  height:342px;
   z-index: 11;
 }
 #Face_login_bgd_img {
-  width:800px;
-  height:600px;
+  width:520px;
+  height:342px;
 }
 #Face_login_close {
   position:absolute;
-  left:750px;
+  left:470px;
   top:10px;
   width:40px;
   height:40px;
@@ -286,29 +286,27 @@ ul{
 }
 #face_email_txt {
   position: absolute;
-  top: 487px;
-  left: 30px;
+  top: 50px;
+  left: 330px;
   width: 200px;
   font-weight:150;
   font-style:normal;
-  font-size:20px;
+  font-size:16px;
 }
 #username {
   position: absolute;
-  top: 507px;
-  left: 100px;
-  width: 400px;
-  height: 20px;
-  background: transparent;
-  border: 0px;
-  border-bottom: 2px solid #333333;
+  top: 100px;
+  left: 330px;
 }
 #capture_btn {
   position: absolute;
-  top: 507px;
-  left: 550px;
-  height: 20px;
-  
+  top: 150px;
+  left: 380px;
+}
+#Face_login_button {
+  position: absolute;
+  top:200px;
+  left: 350px;
 }
 #forget_txt{
   position: absolute;
