--- a/static/css/previous12.7/image_display.css
+++ b/static/css/previous12.7/image_display.css
@@ -12,132 +12,131 @@
   position:absolute;
   z-index:0;
 }
-#Audio {
+#Display_image {
   position: relative;
   top: 200px;
-  height: 650px
+  height: 850px;
 }
-#Audio_bgd {
+#Image_txt {
+  position:absolute;
+  left:140px;
+  top:-58px;
+  width:70px;
+  height:28px;
+}
+#Image_bgd {
   position:absolute;
   left:110px;
   width:1200px;
-  height:340px;
+  height:530px;
 }
-#Audio_icon {
-  position: relative;
-  margin-left: -100px;
-}
-#Download_icon {
+#Image_display {
   position:absolute;
-  left:406px;
-  top:250px;
+  left:140px;
+  top:30px;
+  width:760px;
+  height:420px;
+}
+#Image_title {
+  position:absolute;
+  left:960px;
+  top:20px;
+  width:101px;
+  height:39px;
+  font-family:'CenturyGothic-Bold', 'Century Gothic Bold', 'Century Gothic';
+  font-weight:700;
+  font-style:normal;
+}
+#Image_discription {
+  position:absolute;
+  left:960px;
+  top:90px;
+  width:300px;
+  height:264px;
+  font-family:'CenturyGothic', 'Century Gothic';
+  font-weight:400;
+  font-style:normal;
+  font-size:18px;
+}
+#Image_download_icon {
+  position:absolute;
+  left:140px;
+  top:475px;
   width:30px;
   height:30px;
 }
-#Download_txt {
+#Image_download_txt {
   position:absolute;
-  left:446px;
-  top:239px;
+  left:180px;
+  top:464px;
   width:87px;
   height:21px;
   font-size:18px;
   color:#666666;
 }
-#Like_icon {
+#Image_like_icon {
   position:absolute;
-  left:606px;
-  top:250px;
+  left:340px;
+  top:475px;
   width:30px;
   height:30px;
 }
-#Like_txt {
+#Image_like_txt {
   position:absolute;
-  left:646px;
-  top:239px;
+  left:380px;
+  top:464px;
   width:37px;
   height:21px;
   font-size:18px;
   color:#666666;
 }
-#Like_num {
+#Image_like_num {
   position:absolute;
-  left:692px;
-  top:239px;
+  left:427px;
+  top:464px;
   width:29px;
   height:21px;
   font-size:18px;
 }
-#Dislike_icon {
+#Image_dislike_icon{
   position:absolute;
-  left:786px;
-  top:255px;
+  left:520px;
+  top:480px;
   width:30px;
   height:30px;
 }
-#Dislike_txt {
+#Image_dislike_txt {
   position:absolute;
-  left:836px;
-  top:239px;
+  left:571px;
+  top:464px;
   width:59px;
   height:21px;
   font-size:18px;
   color:#666666;
 }
-#Dislike_num {
+#Image_dislike_num {
   position:absolute;
-  left:906px;
-  top:239px;
+  left:640px;
+  top:464px;
   width:11px;
   height:21px;
   font-size:18px;
 }
-#Collect_icon {
+#Image_collect_icon {
   position:absolute;
-  left:976px;
-  top:255px;
+  left:710px;
+  top:480px;
   width:25px;
   height:25px;
 }
-#Collect_txt {
+#Image_collect_txt {
   position:absolute;
-  left:1016px;
-  top:239px;
+  left:750px;
+  top:464px;
   width:61px;
   height:21px;
   font-size:18px;
   color:#666666;
-}
-#Audio_title {
-  position:absolute;
-  left:140px;
-  top:-58px;
-  width:90px;
-  height:28px;
-}
-#Audio_cover {
-  position:absolute;
-  left:200px;
-  top:60px;
-  width:150px;
-  height:160px;
-}
-#Audio_lyric {
-  position:absolute;
-  left:410px;
-  top:300px;
-  width:667px;
-  height:370px;
-}
-#Audio_player {
-  position:absolute;
-  left:260px;
-  top:60px;
-  width:862px;
-  height:160px;
-  font-family:'STHeitiSC-Light', 'Heiti SC Light', 'Heiti SC';
-  font-weight:200;
-  font-style:normal;
-  font-size:36px;
 }
 #Display_author {
   position: relative;
