--- a/static/css/previous12.7/signup2.css
+++ b/static/css/previous12.7/signup2.css
@@ -67,69 +67,82 @@
   height:23px;
   font-size:20px;
 }
-#Photo_1 {
+#Photo_img_1 {
   position:absolute;
-  left:830px;
-  top:50px;
-}
-#Photo_2 {
-  position: absolute;
-  left: 1070px;
-  top: 50px;
-}
-#Photo_3 {
-  position: absolute;
-  left: 830px;
-  top: 250px;
-}
-#Photo_4 {
-  position: absolute;
-  left: 1070px;
-  top: 250px;
-}
-#Photo_5 {
-  position: absolute;
-  left: 830px;
-  top: 450px;
-}
-.Photo_display img {
-  position:absolute;
-  left:0px;
-  top:40px;
-  width:200px;
-  height:150px;
+  left:940px;
+  top:83px;
+  width:240px;
+  height:160px;
   font-size:28px;
   color:#999999;
 }
-.Photo_display img {
+#Photo_img_2 {
   position:absolute;
-  left:0px;
-  top:40px;
-  width:200px;
-  height:150px;
+  left:940px;
+  top:314px;
+  width:240px;
+  height:160px;
   font-size:28px;
   color:#999999;
 }
-.Photo_display canvas {
+#Photo_img_3 {
   position:absolute;
-  left:0px;
-  top:40px;
-  width:200px;
-  height:150px;
+  left:940px;
+  top:545px;
+  width:240px;
+  height:160px;
+  font-size:28px;
+  color:#999999;
 }
-.Photo_txt {
+#Photo_txt_1 {
   position:absolute;
+  left:940px;
+  top:30px;
   width:70px;
   height:23px;
-  font-size:16px;
+  font-size:20px;
 }
-.delete {
+#Photo_txt_2 {
   position:absolute;
-  left:165px;
-  top:180px;
+  left:940px;
+  top:261px;
+  width:70px;
+  height:23px;
+  font-size:20px;
+}
+#Photo_txt_3 {
+  position:absolute;
+  left:940px;
+  top:492px;
+  width:70px;
+  height:23px;
+  font-size:20px;
+}
+#Photo_delete_1 {
+  position:absolute;
+  left:1135px;
+  top:233px;
   width:45px;
   height:18px;
-  font-size:12px;
+  font-size:16px;
+  text-decoration:underline;
+}
+#Photo_delete_2 {
+  position:absolute;
+  left:1135px;
+  top:464px;
+  width:45px;
+  height:18px;
+  font-size:16px;
+  text-decoration:underline;
+}
+#Photo_delete_3 {
+  position:absolute;
+  left:1135px;
+  top:695px;
+  width:45px;
+  height:18px;
+  font-size:16px;
   text-decoration:underline;
 }
 #Take_photo {
