--- a/templates/Authentication/previous12.13/signup2.html
+++ b/templates/Authentication/previous12.13/signup2.html
@@ -103,22 +103,46 @@
       <img id="Signup_bgd" src="/static/images/upload/u56.png"/>
       <p id="Signup_title" class="h2">Sign up</p>
 
-      <p id="Signup_hint" class="paragraph">5 photos are required to be taken for Face Login function</p>
+      <p id="Signup_hint" class="paragraph">3 photos are required to be taken for Face Login function</p>
       <div id="Signup_camera">
           <div id="webcam2"></div>
       </div>
       <button id="Take_photo">Take photo</button>
+
+      <div id="Photo_1" class="Photo_display">
+        <img id="Photo_img_1" src="images/upload/u60.png"/>
+        <p class="Photo_txt paragraph">Photo 1</p>
+        <canvas id="Photo_img_1"></canvas>
+      </div>
+
+      <div id="Photo_2" class="Photo_display">
+        <img id="Photo_img_2" src="images/upload/u60.png"/>
+        <p class="Photo_txt paragraph">Photo 2</p>
+        <canvas id="Photo_img_2"></canvas>
+      </div>
+
+      <div id="Photo_3" class="Photo_display">
+        <img id="Photo_img_3" src="images/upload/u60.png"/>
+        <p class="Photo_txt paragraph">Photo 3</p>
+        <canvas id="Photo_img_3"></canvas>
+      </div>
+
+      <div id="Photo_4" class="Photo_display">
+        <img id="Photo_img_4" src="images/upload/u60.png"/>
+        <p class="Photo_txt paragraph">Photo 4</p>
+        <canvas id="Photo_img_4"></canvas>
+      </div>
+
+      <div id="Photo_5" class="Photo_display">
+        <img id="Photo_img_5" src="images/upload/u60.png"/>
+        <p class="Photo_txt paragraph">Photo 5</p>
+        <canvas id="Photo_img_5"></canvas>
+      </div>
+      
       <a id="Signup_bt" class="shape" href="/">
         <img id="Signup_bt_bgd" src="/static/images/edit/u62.png"/>
         <p id="Signup_bt_txt">Sign up</p>
       </a>
-      <div id="Photo">
-        <img id="Photo_1" src="/static/images/personal_page/u0.png"/>
-        <img id="Photo_2" src="/static/images/personal_page/u0.png"/>
-        <img id="Photo_3" src="/static/images/personal_page/u0.png"/>
-        <img id="Photo_4" src="/static/images/personal_page/u0.png"/>
-        <img id="Photo_5" src="/static/images/personal_page/u0.png"/>
-      </div>
     </div>
     <div id="blank"></div>
     <div id = "Footer">
