修改了格式，只用加上item，也不用编号，会自动排序的

--- a/templates/Webpages/collected_image.html
+++ b/templates/Webpages/collected_image.html
@@ -5,7 +5,7 @@
 	<meta charset='utf-8'/>
   <link href="/static/css/styles.css" type="text/css" rel="stylesheet"/>
   <link href="/static/css/header.css" type="text/css" rel="stylesheet"/>
-  <link rel="stylesheet" type="text/css" href="/static/css/uploaded_image.css">
+  <link rel="stylesheet" type="text/css" href="/static/css/uploaded_video.css">
 	<script type="text/javascript" src="/static/js/jquery.js"></script>
 	<script type="text/javascript" src="/static/js/header.js"></script>
   <script type="text/javascript" src="/static/js/uploaded_image.js"></script>
@@ -102,27 +102,27 @@
   <div id="Uploaded">
         <p class="Title">Collected Image</p>
         <ul id = "display_detail" class="display">
-          <li id="item0">
+          <li id="item">
             <img src="/static/images/home/photo_1.jpg">
             <p>Gates</p>
             <a href="video_display.html"></a>
           </li>
-          <li id="item1">
+          <li id="item">
             <img src="/static/images/home/photo_1.jpg">
             <p>Gates</p>
             <a href="video_display.html"></a>
           </li>
-          <li id="item2">
+          <li id="item">
             <img src="/static/images/home/photo_1.jpg">
             <p>Gates</p>
             <a href="video_display.html"></a>
           </li>
-          <li id="item3">
+          <li id="item">
             <img src="/static/images/home/photo_1.jpg">
             <p>Gates</p>
             <a href="video_display.html"></a>
           </li>
-          <li id="item0" class="last">
+          <li id="item">
             <img src="/static/images/home/photo_1.jpg">
             <p>Gates</p>
             <a href="video_display.html"></a>
