--- a/templates/Webpages/collected_video.html
+++ b/templates/Webpages/collected_video.html
@@ -102,27 +102,27 @@
   <div id="Uploaded">
         <p class="Title">Collected Video</p>
         <ul id = "display_detail" class="display">
-          <li id="item0">
+          <li id="item">
             <img src="/static/images/home/photo_1.jpg">
             <p>Gates</p>
             <a href="video_display.html"></a>
           </li>
-          <li id="item1">
+          <li id="item">
             <img src="/static/images/home/photo_1.jpg">
             <p>Gates</p>
             <a href="video_display.html"></a>
           </li>
-          <li id="item2">
+          <li id="item">
             <img src="/static/images/home/photo_1.jpg">
             <p>Gates</p>
             <a href="video_display.html"></a>
           </li>
-          <li id="item3">
+          <li id="item">
             <img src="/static/images/home/photo_1.jpg">
             <p>Gates</p>
             <a href="video_display.html"></a>
           </li>
-          <li id="item0" class="last">
+          <li id="item">
             <img src="/static/images/home/photo_1.jpg">
             <p>Gates</p>
             <a href="video_display.html"></a>
