--- a/templates/Webpages/previous12.13/collected_video.html
+++ b/templates/Webpages/previous12.13/collected_video.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Uploaded Image</title>
+	<title>Collected Video</title>
 	<meta charset='utf-8'/>
   <link href="/static/css/styles.css" type="text/css" rel="stylesheet"/>
   <link href="/static/css/header.css" type="text/css" rel="stylesheet"/>
   <link rel="stylesheet" type="text/css" href="/static/css/uploaded_video.css">
 	<script type="text/javascript" src="/static/js/jquery.js"></script>
 	<script type="text/javascript" src="/static/js/header.js"></script>
-  <script type="text/javascript" src="/static/js/uploaded_image.js"></script>
+  <script type="text/javascript" src="/static/js/uploaded_video.js"></script>
   <script src="/static/js/jquery.webcam.min.js"></script>
 </head>
 <body>
@@ -100,29 +100,29 @@
   </div>
 
   <div id="Uploaded">
-        <p class="Title">Uploaded Image</p>
+        <p class="Title">Collected Video</p>
         <ul id = "display_detail" class="display">
-          <li id="item">
+          <li id="item0">
             <img src="/static/images/home/photo_1.jpg">
             <p>Gates</p>
             <a href="video_display.html"></a>
           </li>
-          <li id="item">
+          <li id="item1">
             <img src="/static/images/home/photo_1.jpg">
             <p>Gates</p>
             <a href="video_display.html"></a>
           </li>
-          <li id="item">
+          <li id="item2">
             <img src="/static/images/home/photo_1.jpg">
             <p>Gates</p>
             <a href="video_display.html"></a>
           </li>
-          <li id="item">
+          <li id="item3">
             <img src="/static/images/home/photo_1.jpg">
             <p>Gates</p>
             <a href="video_display.html"></a>
           </li>
-          <li id="item">
+          <li id="item0" class="last">
             <img src="/static/images/home/photo_1.jpg">
             <p>Gates</p>
             <a href="video_display.html"></a>
