--- a/templates/Webpages/previous12.13/search.html
+++ b/templates/Webpages/previous12.13/search.html
@@ -133,19 +133,15 @@
             <p id="cata_txt" class="h2">Catagory:</p>
             <ul id="Cata">
             {% for cata in catagories %}
-              <li id="cata_item" class="ax_checkbox">
-                <label for="cata_bt"><p>{{ cata.catagory_name }}</p></label>
-                <input id="cata_bt" type="checkbox" value="checkbox"/>
+              <li id="cata_video_animation" class="ax_checkbox">
+                <label for="cata_video_animation_bt"><p>{{ cata.catagory_name }}</p></label>
+                <input id="cata_video_animation_bt" type="checkbox" value="checkbox"/>
               </li>
             {% endfor %}
             </ul>
           </div>
-          <a id="update_bt" class="shape" href="#">
-              <img id="update_bt_bgd" src="/static/images/search/u111.png"/>
-              <p id="update_bt_txt">Update</p>
-            </a>
           <ul id="Video_content" class="Content">
-            <li>
+            <li id="item0">
               <a class="item" href="video_display.html">
                 <img src="/static/images/home/photo_1.jpg"/>
                 <p id="Content_title">Title</p>
@@ -155,7 +151,7 @@
                 <p id="Content_time">21:55</p>
               </a>
             </li>
-            <li>
+            <li id="item1">
               <a class="item" href="video_display.html">
                 <img src="/static/images/home/photo_1.jpg"/>
                 <p id="Content_title">Title</p>
@@ -165,7 +161,7 @@
                 <p id="Content_time">21:55</p>
               </a>
             </li>
-            <li>
+            <li id="item0">
               <a class="item" href="video_display.html">
                 <img src="/static/images/home/photo_1.jpg"/>
                 <p id="Content_title">Title</p>
@@ -175,7 +171,7 @@
                 <p id="Content_time">21:55</p>
               </a>
             </li>
-            <li>
+            <li id="item1">
               <a class="item" href="video_display.html">
                 <img src="/static/images/home/photo_1.jpg"/>
                 <p id="Content_title">Title</p>
@@ -185,7 +181,7 @@
                 <p id="Content_time">21:55</p>
               </a>
             </li>
-            <li>
+            <li id="item0" class="last">
               <a class="item" href="video_display.html">
                 <img src="/static/images/home/photo_1.jpg"/>
                 <p id="Content_title">Title</p>
@@ -217,9 +213,9 @@
             <p id="cata_txt" class="h2">Catagory:</p>
             <ul id="Cata">
             {% for cata in catagories %}
-              <li id="cata_item" class="ax_checkbox">
-                <label for="cata_bt"><p>{{ cata.catagory_name }}</p></label>
-                <input id="cata_bt" type="checkbox" value="checkbox"/>
+              <li id="cata_audio_music" class="ax_checkbox">
+                <label for="cata_audio_music_bt"><p>{{ cata.catagory_name }}</p></label>
+                <input id="cata_audio_music_bt" type="checkbox" value="checkbox"/>
               </li>
             {% endfor %}
             </ul>
@@ -229,7 +225,7 @@
             </a>
           </div>
           <ul id="Audio_content" class="Content">
-            <li>
+            <li id="item0">
               <a class="item" href="video_display.html">
                 <img src="/static/images/home/photo_1.jpg"/>
                 <p id="Content_title">Title</p>
@@ -239,7 +235,7 @@
                 <p id="Content_time">21:55</p>
               </a>
             </li>
-            <li>
+            <li id="item1">
               <a class="item" href="video_display.html">
                 <img src="/static/images/home/photo_1.jpg"/>
                 <p id="Content_title">Title</p>
@@ -270,9 +266,9 @@
             <p id="cata_txt" class="h2">Catagory:</p>
             <ul id="Cata">
             {% for cata in catagories %}
-              <li id="cata_item" class="ax_checkbox">
-                <label for="cata_bt"><p>{{ cata.catagory_name }}</p></label>
-                <input id="cata_bt" type="checkbox" value="checkbox"/>
+              <li id="cata_image_natural" class="ax_checkbox">
+                <label for="cata_image_natural_bt"><p>{{ cata.catagory_name }}</p></label>
+                <input id="cata_image_natural_bt" type="checkbox" value="checkbox"/>
               </li>
             {% endfor %}
             </ul>
@@ -283,7 +279,7 @@
           </div>
 
           <ul id="Image_content" class="Content">
-            <li>
+            <li id="item0">
               <a class="item" href="video_display.html">
                 <img src="/static/images/home/photo_1.jpg"/>
                 <p id="Content_title">Title</p>
@@ -293,7 +289,7 @@
                 <p id="Content_time">21:55</p>
               </a>
             </li>
-            <li>
+            <li id="item1">
               <a class="item" href="video_display.html">
                 <img src="/static/images/home/photo_1.jpg"/>
                 <p id="Content_title">Title</p>
@@ -321,7 +317,7 @@
 
         <div id="Content_user">
           <ul id="User_content" class="Content">
-            <li>
+            <li id="item0">
               <a class="item" href="video_display.html">
                 <img src="/static/images/home/photo_1.jpg"/>
                 <p id="Content_title">Title</p>
@@ -331,7 +327,7 @@
                 <p id="Content_time">21:55</p>
               </a>
             </li>
-            <li>
+            <li id="item1">
               <a class="item" href="video_display.html">
                 <img src="/static/images/home/photo_1.jpg"/>
                 <p id="Content_title">Title</p>
