--- a/templates/Webpages/previous12.13/uploaded_image.html
+++ b/templates/Webpages/previous12.13/uploaded_image.html
@@ -5,7 +5,7 @@
 	<meta charset='utf-8'/>
   <link href="/static/css/styles.css" type="text/css" rel="stylesheet"/>
   <link href="/static/css/header.css" type="text/css" rel="stylesheet"/>
-  <link rel="stylesheet" type="text/css" href="/static/css/uploaded_video.css">
+  <link rel="stylesheet" type="text/css" href="/static/css/uploaded_image.css">
 	<script type="text/javascript" src="/static/js/jquery.js"></script>
 	<script type="text/javascript" src="/static/js/header.js"></script>
   <script type="text/javascript" src="/static/js/uploaded_image.js"></script>
@@ -102,27 +102,27 @@
   <div id="Uploaded">
         <p class="Title">Uploaded Image</p>
         <ul id = "display_detail" class="display">
-          <li id="item">
+          <li id="item0">
             <img src="/static/images/home/photo_1.jpg">
             <p>Gates</p>
             <a href="video_display.html"></a>
           </li>
-          <li id="item">
+          <li id="item1">
             <img src="/static/images/home/photo_1.jpg">
             <p>Gates</p>
             <a href="video_display.html"></a>
           </li>
-          <li id="item">
+          <li id="item2">
             <img src="/static/images/home/photo_1.jpg">
             <p>Gates</p>
             <a href="video_display.html"></a>
           </li>
-          <li id="item">
+          <li id="item3">
             <img src="/static/images/home/photo_1.jpg">
             <p>Gates</p>
             <a href="video_display.html"></a>
           </li>
-          <li id="item">
+          <li id="item0" class="last">
             <img src="/static/images/home/photo_1.jpg">
             <p>Gates</p>
             <a href="video_display.html"></a>
