--- a/templates/Webpages/previous12.13/uploaded_video.html
+++ b/templates/Webpages/previous12.13/uploaded_video.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Uploaded Image</title>
+	<title>Uploaded Video</title>
 	<meta charset='utf-8'/>
   <link href="/static/css/styles.css" type="text/css" rel="stylesheet"/>
   <link href="/static/css/header.css" type="text/css" rel="stylesheet"/>
   <link rel="stylesheet" type="text/css" href="/static/css/uploaded_video.css">
 	<script type="text/javascript" src="/static/js/jquery.js"></script>
 	<script type="text/javascript" src="/static/js/header.js"></script>
-  <script type="text/javascript" src="/static/js/uploaded_image.js"></script>
+  <script type="text/javascript" src="/static/js/uploaded_video.js"></script>
   <script src="/static/js/jquery.webcam.min.js"></script>
 </head>
 <body>
@@ -100,33 +100,18 @@
   </div>
 
   <div id="Uploaded">
-        <p class="Title">Uploaded Image</p>
+        <p class="Title">Uploaded Video</p>
         <ul id = "display_detail" class="display">
-          <li id="item">
-            <img src="/static/images/home/photo_1.jpg">
-            <p>Gates</p>
-            <a href="video_display.html"></a>
+        {% for item in list %}
+            <li id="item{{ forloop.counter0 }}">
+            <img src="{{ item.cover.url }}">
+            <p>{{ item.title }}</p>
+            <a href="/playpage/{{ item.video }}"></a>
           </li>
-          <li id="item">
-            <img src="/static/images/home/photo_1.jpg">
-            <p>Gates</p>
-            <a href="video_display.html"></a>
-          </li>
-          <li id="item">
-            <img src="/static/images/home/photo_1.jpg">
-            <p>Gates</p>
-            <a href="video_display.html"></a>
-          </li>
-          <li id="item">
-            <img src="/static/images/home/photo_1.jpg">
-            <p>Gates</p>
-            <a href="video_display.html"></a>
-          </li>
-          <li id="item">
-            <img src="/static/images/home/photo_1.jpg">
-            <p>Gates</p>
-            <a href="video_display.html"></a>
-          </li>
+        {% endfor %}
+
+          <li id="item3" class="last"></li>
+
         </ul>
         <!-- Footer -->
       <div id = "Footer">
