--- a/static/css/previous12.13/search.css
+++ b/static/css/previous12.13/search.css
@@ -58,7 +58,6 @@
   width:1160px;
   height:105px;
   background-color: #DDDDDD;
-  border-bottom: solid #999999 2px;
 }
 #Na_video {
   position:absolute;
@@ -119,17 +118,71 @@
   height:105px;
   font-size:20px;
 }
+#sort_txt {
+  position:absolute;
+  left:40px;
+  top:2px;
+  width:90px;
+  height:21px;
+  font-size:18px;
+}
+#Sort {
+  position: absolute;
+  top:22px;
+}
+#sort_relevance {
+  position:absolute;
+  left:160px;
+  width:100px;
+  height:15px;
+}
+#Sort p {
+  position:absolute;
+  left:16px;
+  top:-12px;
+  width:82px;
+  word-wrap:break-word;
+}
+#Sort input{
+  position:absolute;
+  left:-3px;
+  top:-2px;
+}
+#sort_latest {
+  position:absolute;
+  left:260px;
+  width:100px;
+  height:15px;
+}
+#sort_oldest {
+  position:absolute;
+  left:360px;
+  width:100px;
+  height:15px;
+}
+#sort_most {
+  position:absolute;
+  left:460px;
+  width:100px;
+  height:15px;
+}
+#sort_least {
+  position:absolute;
+  left:590px;
+  width:100px;
+  height:15px;
+}
 #cata_txt {
   position:absolute;
   left:40px;
-  top:27px;
+  top:47px;
   width:90px;
   height:21px;
   font-size:18px;
 }
 #Cata {
   position: absolute;
-  top: 47px;
+  top: 67px;
 }
 #Cata p {
   position:absolute;
@@ -143,10 +196,51 @@
   left:-3px;
   top:-2px;
 }
-#cata_item {
-  position: relative;
+#cata_video_animation {
+  position: absolute;
   left: 160px;
-  width: 100px;
+}
+#cata_video_music {
+  position:absolute;
+  left:260px;
+  width:100px;
+  height:15px;
+}
+#cata_video_game {
+  position:absolute;
+  left:360px;
+  width:100px;
+  height:15px;
+}
+#cata_video_tech {
+  position:absolute;
+  left:460px;
+  width:150px;
+  height:15px;
+}
+#cata_video_entertainment {
+  position:absolute;
+  left:590px;
+  width:120px;
+  height:15px;
+}
+#cata_video_TV {
+  position:absolute;
+  left:720px;
+  width:120px;
+  height:15px;
+}
+#cata_video_life {
+  position:absolute;
+  left:840px;
+  width:120px;
+  height:15px;
+}
+#cata_video_fashion {
+  position:absolute;
+  left:940px;
+  width:120px;
+  height:15px;
 }
 #update_bt {
   position:absolute;
@@ -177,16 +271,17 @@
 }
 .item {
   position: absolute;
-  top: 10px;
-  width: 1158px;
+  width: 580px;
   height: 180px;
+  background-color: #DDDDDD;
+  border: #999999 solid 1px;
 }
 .item:hover{
   background-color: #EEEEEE;
 }
 .Content img {
   position:absolute;
-  left:60px;
+  left:20px;
   top:31px;
   width:140px;
   height:118px;
@@ -194,38 +289,43 @@
 .Content p {
   font-family:'Arial', 'Arial';
 }
-.Content li {
+#item0 {
   position: relative;
-  height: 200px;
-  background-color: #DDDDDD;
-  border-bottom: #999999 solid 2px;
+  left:0px;
+}
+#item1 {
+  position: relative;
+  left:580px;
+  height: 180px;
+}
+.last {
+  height: 180px;
 }
 #Content_title {
   position:absolute;
-  left:260px;
-  top:10px;
-  width:700px;
+  left:190px;
+  top:5px;
+  width:50px;
   height:28px;
   font-family:'Arial-BoldMT', 'Arial Bold', 'Arial';
   font-weight:700;
   font-style:normal;
-  font-size:26px;
+  font-size:24px;
   color:#333333;
   text-align:left;
   line-height:normal;
 }
 #Content_discription {
   position:absolute;
-  left:260px;
-  top:70px;
-  width:720px;
+  left:190px;
+  top:49px;
+  width:77px;
   height:18px;
   font-size:16px;
-  color:#333333;
 }
 #Content_date {
   position:absolute;
-  left:1000px;
+  left:190px;
   top:116px;
   width:72px;
   height:18px;
@@ -234,21 +334,103 @@
 }
 #Content_name {
   position:absolute;
-  left: 1000px;
-  top:76px;
-  width:200px;
+  left:342px;
+  top:116px;
+  width:78px;
   height:18px;
   font-size:16px;
   color:#666666;
 }
 #Content_time {
   position:absolute;
-  left:1080px;
+  left:280px;
   top:116px;
   width:41px;
   height:18px;
   font-size:16px;
   color:#666666;
+}
+#cata_audio_music {
+  position:absolute;
+  left:160px;
+  width:100px;
+  height:15px;
+}
+#cata_audio_book {
+  position:absolute;
+  left:260px;
+  width:100px;
+  height:15px;
+}
+#cata_audio_talk {
+  position:absolute;
+  left:360px;
+  width:100px;
+  height:15px;
+}
+#cata_audio_entertainment {
+  position:absolute;
+  left:460px;
+  width:120px;
+  height:15px;
+}
+#cata_audio_news {
+  position:absolute;
+  left:590px;
+  width:120px;
+  height:15px;
+}
+#cata_audio_others {
+  position:absolute;
+  left:700px;
+  width:120px;
+  height:15px;
+}
+#cata_image_natural {
+  position: absolute;
+  left: 160px;
+}
+#cata_image_animal {
+  position:absolute;
+  left:280px;
+  width:100px;
+  height:15px;
+}
+#cata_image_sports {
+  position:absolute;
+  left:360px;
+  width:100px;
+  height:15px;
+}
+#cata_image_foods {
+  position:absolute;
+  left:460px;
+  width:150px;
+  height:15px;
+}
+#cata_image_ideas {
+  position:absolute;
+  left:550px;
+  width:120px;
+  height:15px;
+}
+#cata_image_wallpaper {
+  position:absolute;
+  left:630px;
+  width:120px;
+  height:15px;
+}
+#cata_image_fashion {
+  position:absolute;
+  left:740px;
+  width:120px;
+  height:15px;
+}
+#cata_image_tech {
+  position:absolute;
+  left:840px;
+  width:120px;
+  height:15px;
 }
 #blank {
   position: relative;
