--- a/static/css/previous12.13/signup2.css
+++ b/static/css/previous12.13/signup2.css
@@ -29,7 +29,7 @@
 }
 #Signup_camera {
   position:absolute;
-  left:440px;
+  left:190px;
   top:180px;
   width:600px;
   height:400px;
@@ -39,7 +39,7 @@
 }
 #Signup_bt {
   position:absolute;
-  left:630px;
+  left:600px;
   top:760px;
   width:220px;
   height:50px;
@@ -62,44 +62,80 @@
 #Signup_hint {
   position:absolute;
   left:190px;
-  top:70px;
+  top:100px;
   width:505px;
   height:23px;
   font-size:20px;
 }
-#Photo {
-  position: absolute;
-  top: 600px;
-  left: 420px;
-}
-#Photo img{
-    width:40px;
-  height: 40px;
-}
 #Photo_1 {
   position:absolute;
-  left:100px;
+  left:830px;
+  top:50px;
 }
 #Photo_2 {
   position: absolute;
-  left: 200px;
+  left: 1070px;
+  top: 50px;
 }
 #Photo_3 {
   position: absolute;
-  left: 300px;
+  left: 830px;
+  top: 250px;
 }
 #Photo_4 {
   position: absolute;
-  left: 400px;
+  left: 1070px;
+  top: 250px;
 }
 #Photo_5 {
   position: absolute;
-  left: 500px;
+  left: 830px;
+  top: 450px;
+}
+.Photo_display img {
+  position:absolute;
+  left:0px;
+  top:40px;
+  width:200px;
+  height:150px;
+  font-size:28px;
+  color:#999999;
+}
+.Photo_display img {
+  position:absolute;
+  left:0px;
+  top:40px;
+  width:200px;
+  height:150px;
+  font-size:28px;
+  color:#999999;
+}
+.Photo_display canvas {
+  position:absolute;
+  left:0px;
+  top:40px;
+  width:200px;
+  height:150px;
+}
+.Photo_txt {
+  position:absolute;
+  width:70px;
+  height:23px;
+  font-size:16px;
+}
+.delete {
+  position:absolute;
+  left:165px;
+  top:180px;
+  width:45px;
+  height:18px;
+  font-size:12px;
+  text-decoration:underline;
 }
 #Take_photo {
   position:absolute;
-  left:670px;
-  top:690px;
+  left:420px;
+  top:620px;
   width:140px;
   height:40px;
   font-family:'ArialMT', 'Arial';
